# asr

./: .gitignore  CMakeLists.txt  VOSK_MIGRATION.md  deploy_vosk.sh  deploy_vosk_prebuilt.sh  install_dependencies_debian.sh  install_dependencies_rhel.sh  install_third_party.sh  run_vosk_server.sh
src/: main.cpp
utilities/: CMakeLists.txt  GlobalLogger.cpp  GlobalLogger.h  Logger.cpp  Logger.h  Uuid.cpp  Uuid.h
